dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-dev
  namespace: dev
  labels:
    name: my-ingress-dev
spec:
  ingressClassName: nginx
  rules:
  - host: dev-m.int.itoutposts.com
    http:
      paths:
      - pathType: Prefix
        path: "/dev"
        backend:
          service:
            name: my-pod-service  
            port: 
              number: 80
